<resources>
    <string name="app_name">homeStock</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="Categories_Fragment">Categories Fragment</string>
    <string name="Settings_Fragment">Settings Fragment</string>
    <string name="Food">Food</string>
    <string name="Office">Office</string>
    <string name="Home">Home</string>
    <string name="Categories">Categories</string>
    <string name="Setting">Setting</string>
    <string name="Search">Search:</string>
    <string name="Edit">Edit</string>
    <string name="AddButton">+</string>
    <string name="HomeStock">homeStock</string>
    <string name="Menu">Menu</string>
    <string name="ScrollViewText">Shows the user the items present in the database</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_a_homestock_account">Already have a HomeStock account?</string>
    <string name="logout">Logout</string>
    <string name="AcceptPicture">Accept</string>
    <string name="RetakePicture">Retake</string>
    <string name="ImageViewContentDescription">Allows the user to see images that they take</string>
    <string name="ImageButtonContentDescription">Allows the user to take a picture</string>
    <string name="ButtonAddItemDescription">Add Item</string>
    <string name="searchButtonDescription">Description of the search button</string>
    <string name="add_add">Add</string>
    <string name="dialog_message">Enter the Name of the Category you would like to create</string>
    <string name="dialog_title">Create Category</string>
    <string name="AlertAccept"> Create Category</string>
    <string name="AlertCancel"> Cancel</string>
    <string name="Settings"> Settings</string>
    <string name="ManageHome"> Manage Home</string>
    <string name="categoryContentDescription">Adds a new category</string>

    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notifications">Notifications</string>
    <string name="family">Family</string>
    <string name="night_mode">Night Mode</string>
    <string name="first_name">First name</string>
    <string name="name">Name</string>
    <string name="my_family">My Family</string>
    <string name="add_family_member">Add Family Member</string>
    <string name="change_profile_picture">Change profile picture</string>

    <string-array name="image_sources">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>

    <string name="type_category_name_here">Type Category Name Here</string>
    <string name="category_description">category Description</string>
    <string name="select_items_to_add_to_category">Select items to add to category</string>
    <string name="this_is_where_the_items_are_placed">This is where the items are placed</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="delete">Delete</string>
    <string name="shopping">Shopping List</string>
    <string name="delete_items_menu">Delete items menu</string>
    <string name="selectitemtodelete">Select Items You Wish To Delete</string>
    <string name="quantity">Quantity</string>

</resources>