<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:background="@color/lavender">

    <!-- Creates the navigation menu of the app -->
    <group android:checkableBehavior="single">

        <!-- Creates the item for home on the menu -->
        <item
            android:id="@+id/nav_home"
            android:title="@string/Home"
            android:icon="@drawable/baseline_home_24"
            android:gravity="center"
            android:titleTextColor="@color/peach"
            android:textColor="@color/black" />

        <!-- Creates the item for profile on the menu -->
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/nav_profile"
            android:title="@string/profile"
            android:gravity="center"
            android:titleTextColor="@color/peach" />

        <!-- Creates the item for category on the menu -->
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/nav_category"
            android:title="@string/Categories"
            android:gravity="center"
            android:titleTextColor="@color/peach" />

        <!-- Creates the item for home on the menu -->
        <item
            android:id="@+id/nav_shoppinglist"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/shopping"
            android:gravity="center"
            android:titleTextColor="@color/peach"
            android:textColor="@color/black" />

        <!-- Creates the item for settings on the menu -->
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/Setting"
            android:gravity="center"
            android:titleTextColor="@color/peach" />

        <!-- Creates the item for logout on the menu -->
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/nav_logout"
            android:title="@string/logout"
            android:gravity="center"
            android:titleTextColor="@color/peach" />

    </group>
</menu>
