<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="add"
        android:hint="@string/type_category_name_here"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#448AFF"
        android:textSize="20sp"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="370dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="#7E7E7E"
        android:backgroundTint="#B8B8B8"
        android:backgroundTintMode="add"
        android:hint="@string/category_description"
        android:textColor="@color/black"
        android:textColorHint="#000000"
        android:textSize="12sp"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/select_items_to_add_to_category"
        android:textSize="20sp"
        tools:ignore="TextSizeCheck" />

    <ScrollView
        android:id="@+id/categoryCheckedItemScrollBar"
        android:layout_width="370dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:background="#B8B8B8"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:contentDescription="@string/this_is_where_the_items_are_placed"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/peach"
            android:text="@string/cancel"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonAccept"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/peach"
            android:text="@string/accept"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>