<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_office"
    android:background="@color/lavender"
    android:name="category_food">

    <!-- TextView displaying the title "Food" -->
    <TextView
        android:id="@+id/textViewFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Office"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <SearchView
        android:id="@+id/SearchViewItemSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/Search"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_centerHorizontal="true"
        android:hint="type in items to search for"/>

    <!-- ScrollView for the search functionality -->
    <ScrollView
        android:id="@+id/ScrollViewItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:background="@drawable/rounded_background"
        android:contentDescription="@string/ScrollViewText"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/LinearLayoutOutside"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:background="@drawable/rounded_background"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>

    <!-- Button for editing items -->
    <Button
        android:id="@+id/ButtonEditItem"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:theme="@style/Base.Theme.PNP2Inventoryapp"
        android:text="@string/Edit"
        android:textSize="20sp"
        android:visibility="gone" />

    <!-- ImageButton for adding items -->
    <ImageButton
        android:id="@+id/ButtonAddItem"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:theme="@style/Base.Theme.PNP2Inventoryapp"
        android:text="@string/AddButton"
        android:textSize="20sp"
        android:src="@drawable/img_plus"
        android:contentDescription="@string/ButtonAddItemDescription" />

    <!-- ListView for displaying items -->
    <ListView
        android:id="@+id/listViewItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ScrollViewItems"
        android:layout_marginTop="30dp" />

</RelativeLayout>