<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Categories"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"/>

    <ScrollView
        android:layout_width="360dp"
        android:layout_height="450dp"
        android:layout_marginTop="60dp">
        <LinearLayout
            android:id="@+id/RelativeLayout"
            android:orientation="horizontal"
            android:layout_width="360dp"
            android:layout_height="450dp"
            tools:context=".fragment_categories">

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:id="@+id/LeftLayout"
                android:orientation="vertical">

                <Button
                    android:id="@+id/ButtonOfficeCategory"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/Office"
                    android:textSize="40sp"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/peach"
                    android:theme="@style/Base.Theme.PNP2Inventoryapp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:id="@+id/RightLayout"
                android:orientation="vertical">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/ButtonFoodCategory"
                    android:theme="@style/Base.Theme.PNP2Inventoryapp"
                    android:text="@string/Food"
                    android:textSize="40sp"
                    android:backgroundTint="@color/peach"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/ButtonAddCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="550dp"
        android:backgroundTint="@color/peach"
        android:contentDescription="@string/categoryContentDescription"
        android:src="@drawable/img_plus"
        android:text="@string/AddButton"
        android:textSize="40sp"
        android:theme="@style/Base.Theme.PNP2Inventoryapp"
        tools:ignore="ImageContrastCheck" />

</RelativeLayout>








