<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <ScrollView
        android:id="@+id/deleteCheckedItemScrollBar"
        android:layout_width="370dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:background="#B8B8B8"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:contentDescription="@string/this_is_where_the_items_are_placed"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/peach"
            android:text="@string/cancel"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonAccept"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/peach"
            android:text="@string/delete"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>