<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/manageHomeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_manage_home">

    <!-- TextView displaying the title "ManageHome" -->
    <TextView
        android:id="@+id/textViewManageHomeStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ManageHome"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <!-- ListView for displaying emails -->
    <ListView
        android:id="@+id/listViewEmails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewManageHomeStock"
        android:layout_marginTop="20dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <!-- LinearLayout containing the buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="2dp">

        <!-- For spacing the buttons out further apart. -->
        <Space
            android:layout_width="3dp"
            android:layout_height="wrap_content" />

        <!-- ImageButton for adding items -->
        <Button
            android:id="@+id/ButtonAddItem"
            android:layout_width="115dp"
            android:layout_height="60dp"
            android:text="@string/add_add"
            android:textColor="@color/black"
            android:backgroundTint="@color/peach"
            android:textSize="20sp"
            android:theme="@style/Base.Theme.PNP2Inventoryapp" />

        <!-- For spacing the buttons out further apart. -->
        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/ButtonEditItem"
            android:layout_width="115dp"
            android:layout_height="60dp"
            android:text="@string/Edit"
            android:textColor="@color/black"
            android:backgroundTint="@color/peach"
            android:textSize="20sp"
            android:theme="@style/Base.Theme.PNP2Inventoryapp" />


        <!-- For spacing the buttons out further apart. -->
        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/ButtonDelete"
            android:layout_width="115dp"
            android:layout_height="60dp"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:backgroundTint="@color/peach"
            android:textSize="20sp"
            android:theme="@style/Base.Theme.PNP2Inventoryapp" />
    </LinearLayout>
</RelativeLayout>






